добавление четной/нечетной периодичности
